eureka enabled in auth & patient module

--- a/pms-auth/src/main/resources/application.properties
+++ b/pms-auth/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+#service name and hosting port
+spring.application.name=pms-auth
+server.port=8000
+
+#Eureka hosting specification
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
 #JWT access key
 jwt.secret=Agastin
 
