--- a/pms-patient/src/main/resources/application.properties
+++ b/pms-patient/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-server.port:8080
+spring.application.name=pms-patient
+server.port:8200
+
+#Eureka hosting specification
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+#JWT access key
+jwt.secret=Agastin
+
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/practice-mgmt-system
+spring.datasource.url=jdbc:postgresql://localhost:5432/practice-management-system
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=password
 spring.datasource.initialization-mode=always
