--- a/pms-auth/src/main/resources/application.properties
+++ b/pms-auth/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialec
 
 #Java MailSender configuration
 spring.mail.host = smtp.gmail.com
-spring.mail.username = ctgeneralhospitalj2@gmail.com
-spring.mail.password = citiustechj2
+spring.mail.username = ctgeneralhospitaljavateam2@gmail.com
+spring.mail.password = ctjavateam2
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
