--- a/pms-auth/src/main/resources/application.properties
+++ b/pms-auth/src/main/resources/application.properties
@@ -1,10 +1,13 @@
+server.port=8083
+spring.application.name=pms-auth
+
 #JWT access key
 jwt.secret=Agastin
 
 #datasource & backend details 
-spring.datasource.url=jdbc:postgresql://localhost:5432/practice-management-system
+spring.datasource.url=jdbc:postgresql://localhost:5432/practice-mgmt-system
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=password_123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -21,9 +24,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialec
 
 #Java MailSender configuration
 spring.mail.host = smtp.gmail.com
-spring.mail.username = ctgeneralhospitalj2@gmail.com
-spring.mail.password = citiustechj2
+spring.mail.username = ctgeneralhospitaljavateam2@gmail.com
+spring.mail.password = ctjavateam2
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
+
+#Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=localhost
+spring.cloud.config.enabled=false
