--- a/pms-patient/src/main/resources/application.properties
+++ b/pms-patient/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/practice-management-system
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=root
 spring.datasource.initialization-mode=always
