--- a/pms-auth/src/main/resources/application.properties
+++ b/pms-auth/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port=8000
 jwt.secret=Agastin
 
 #datasource & backend details 
-spring.datasource.url=jdbc:postgresql://localhost:5432/practice-mgmt-system
+spring.datasource.url=jdbc:postgresql://localhost:5432/practice-management-system
 spring.datasource.username=postgres
-spring.datasource.password=password_123
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
