--- a/pms-patient/src/main/resources/application.properties
+++ b/pms-patient/src/main/resources/application.properties
@@ -7,11 +7,19 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 #JWT access key
 jwt.secret=Agastin
 
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/practice-management-system
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=password
 spring.datasource.initialization-mode=always
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = ctgeneralhospitaljavateam2@gmail.com
+spring.mail.password = ctjavateam2
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+
