--- a/pms-patient/src/main/resources/application.properties
+++ b/pms-patient/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=pms-patient
 server.port:8200
 
 #Eureka hosting specification
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=localhost
+spring.cloud.config.enabled=false
 
 #JWT access key
 jwt.secret=Agastin
