gateway for patient

--- a/pms-auth/src/main/resources/application.properties
+++ b/pms-auth/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #service name and hosting port
 spring.application.name=pms-auth
-server.port=8000
+server.port=8081
 
 #JWT access key
 jwt.secret=Agastin
 
 #datasource & backend details 
-spring.datasource.url=jdbc:postgresql://localhost:5432/practice-management-system
+spring.datasource.url=jdbc:postgresql://localhost:5432/practice-mgmt-system
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=password_123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
