--- a/pms-patient/src/main/resources/application.properties
+++ b/pms-patient/src/main/resources/application.properties
@@ -11,7 +11,7 @@ jwt.secret=Agastin
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/practice-management-system
+spring.datasource.url=jdbc:postgresql://localhost:5432/practice-mgmt-system
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=password_123
 spring.datasource.initialization-mode=always
